--- a/sections/assos.tex
+++ b/sections/assos.tex
@@ -9,7 +9,7 @@
 % \end{tabular}
 
 % Ker'bab
-{\color{black} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Club Kebab}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
+{\color{black} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Kebab Club}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{Weekly sale of a hundred homemade kebabs on campus with a team of 8 other students.} \\
     & {\tiny \ding{110}} \textit{\textbf{Organizing the logistics and communication} of each event with a focus on hygien and security.} \\
@@ -25,27 +25,28 @@
 \end{tabular}
 
 %S&L
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     2021 - 2022 & {\color{black} \vspace{-3mm} \textbf{Sound \& Light Manager}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/people/SL-IMT-Atlantique-Brest/100077578935962/}{\textbf{S\&L}} \\
-%         & {\tiny \ding{110}} \textit{Technical and security manager for setting up events}
-% \end{tabular}
+{\color{black} \textbf{Sound \& Light Manager}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/people/SL-IMT-Atlantique-Brest/100077578935962/}{\textbf{S\&L Club}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Technical and security manager for setting up events} \\
+    & {\tiny \ding{110}} \textit{Writing security files to prepare the }
+\end{tabular}
 
 %BDD
-%\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%    De 2021 à 2022 & {\color{black} \vspace{-3mm} \textbf{Responsable de projets}} \hspace{5mm} \MYhref[myOrange]{https://bdd-imta.hubside.fr/}{\textbf{BDD}} \\
-%        & {\tiny \ding{110}} \textit{Projet vélos : location, entretien et transmission} \\
-%        & {\tiny \ding{110}} \textit{Projet verger : entretien de plans de pommiers sur le campus} \\
-%\end{tabular}
+{\color{black} \textbf{Project Manager}} \hspace{5mm} \MYhref[myOrange]{https://bdd-imta.hubside.fr/}{\textbf{Sustainable Development Bureau}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+       & {\tiny \ding{110}} \textit{Bike-sharing projet : managing the renting system, maintaining the parc et do paperwork} \\
+       & {\tiny \ding{110}} \textit{Orchard Project: Maintenance and planting of apple tree samplings on campus / teaching to students how to take care of an orchard} \\
+\end{tabular}
 
 %Renovo
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     De 2016 à 2022 & {\color{black} \vspace{-3mm} \textbf{Cours de mathématiques et physique}} \hspace{5mm} \MYhref[myOrange]{https://www.renovo.fr/}{\textbf{Renovo}} \\
-%         & {\tiny \ding{110}} \textit{Cours à des classes pendant les vacances} \\
-%         & {\tiny \ding{110}} \textit{Sorties culturelles et inspirantes}
-% \end{tabular}
+{\color{black} \textbf{Mathematics and Physics Teacher}} \hspace{5mm} \MYhref[myOrange]{https://www.renovo.fr/}{\textbf{Renovo}} \hfill {\color{black}\textbf{2016 - 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Teaching to classes of students from disadvantaged neighborhoods during the holidays} \\
+    & {\tiny \ding{110}} \textit{Cultural and inspiring outings in museum and local startups and companies with the students}
+\end{tabular}
 
 %Ensemble pour l'Avenir
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     2012 - 2016 & {\color{black} \vspace{-3mm} \textbf{Food Assistance}} \hspace{5mm} \MYhref[myOrange]{http://ensemblepourlavenir1.free.fr/}{\textbf{Ensemble pour l'Avenir}} \\
-%         & {\tiny \ding{110}} \textit{Preparation and meal services: 150 covers per evening}
-% \end{tabular}
+{\color{black} \textbf{Food Assistance}} \hspace{5mm} \MYhref[myOrange]{http://ensemblepourlavenir1.free.fr/}{\textbf{Ensemble pour l'Avenir}} \hfill {\color{black}\textbf{2012 - 2016}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Preparation and meal services of 150 covers per evening to homeless people during summer holidays}
+\end{tabular}
