--- a/sections/exp_pro.tex
+++ b/sections/exp_pro.tex
@@ -1,14 +1,5 @@
 {\fontsize{13}{10}\selectfont \color{black} \textbf{Experience}}
 
-%SIMULANDS previous
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     October 2023 - March 2024 & {\color{black} \vspace{-3mm} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \\
-%         & \vspace{-6.5mm} {\tiny \ding{110}}
-%         \textit{A medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights} \\
-%         & {\tiny \ding{110}} \textit{Developing a Mixed Reality Software : developing a model to track hands and surgical tools and a stereovision algorithm to estimate their position / designing hardware and software architecture and parallelizing the code to improve real time computation / optimizing the software setup / building a } \\
-%         & {\tiny \ding{110}} \textit{Database administration :} \\
-%         & {\tiny \ding{110}} \textit{Skills: lorem ipsum}
-% \end{tabular}
 
 %  SIMULANDS
 {\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - March 2024}}\\ \vspace{1mm}
@@ -34,22 +25,31 @@
     & {\tiny \ding{110}} \textit{Project : \textbf{Development of an inverter monitoring tool}} \\
 \end{tabular}
 
-% %PostExo previous
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     February 2022 & {\color{black} \vspace{-3mm} \textbf{Right-hand of the CEO}} \hspace{5mm} \MYhref[myOrange]{https://postexo.com/}{\textbf{PostExo}} \\
-%         & {\tiny \ding{110}} \textit{An educational application that allowes student to upload questions that are addressed by teachers. The app's whiteboard feature transforms remote education dynamic. It charges only at the end of the session, embodying a commitment to democratize knowledge.} \\
-%         & {\tiny \ding{110}} \textit{Process automation and website redesign} \\
-%         & {\tiny \ding{110}} \textit{Establishment of communication strategies} \\
-%         & {\tiny \ding{110}} \textit{Skills: lorem ipsum}
-% \end{tabular}
+%PostExo
+{\color{black} \textbf{Right hand of the CEO}} \hspace{5mm} \MYhref[myOrange]{https://postexo.com/}{\textbf{PostExo}} \hfill {\color{black}\textbf{February 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Automation of the registering process using the website and Zapier to schedule meetings} \\
+    & {\tiny \ding{110}} \textit{Process automation and website redesign} \\
+    & {\tiny \ding{110}} \textit{Establishment of communication strategies using social media / website redesign with more flexible architecture thought to be adaptable}
+\end{tabular}
 
 %UberEats previous
 %\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
 %    De mars 2018 à août 2018 & {\color{black} \vspace{-3mm} \textbf{Livreur à vélo}} \hspace{5mm} \MYhref[myOrange]{https://www.ubereats.com/fr}{\textbf{UberEats}}
 %\end{tabular}
 
-%Institut Curie previous
+%Institut Curie
+{\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://curie.fr/}{\textbf{Institut Curie}} \hfill {\color{black}\textbf{January 2015 - June 2015}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Shadowing researchers once a week, performing basic manipulations to maintain growth of cultures and electrophorese to split the groups according to genes presence, and delivering presentations on the results and on the work performed}
+\end{tabular}
+
+%SIMULANDS previous
 % \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     January 2015 - June 2015 & {\color{black} \vspace{-3mm} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://curie.fr/}{\textbf{Institut Curie}} \\
-%         & \vspace{-6.5mm} {\tiny \ding{110}} \textit{Shadowing researchers, performing basic manipulations, and delivering presentations}
+%     October 2023 - March 2024 & {\color{black} \vspace{-3mm} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \\
+%         & \vspace{-6.5mm} {\tiny \ding{110}}
+%         \textit{A medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights} \\
+%         & {\tiny \ding{110}} \textit{Developing a Mixed Reality Software : developing a model to track hands and surgical tools and a stereovision algorithm to estimate their position / designing hardware and software architecture and parallelizing the code to improve real time computation / optimizing the software setup / building a } \\
+%         & {\tiny \ding{110}} \textit{Database administration :} \\
+%         & {\tiny \ding{110}} \textit{Skills: lorem ipsum}
 % \end{tabular}
