--- a/sections/variables.tex
+++ b/sections/variables.tex
@@ -1,5 +1,5 @@
 % This document manages the variables in the CV and needs to be put before each use if the variable
 
-\newcommand{\jobTitle}{an Engineer }
+\newcommand{\jobTitle}{a Graphic Programmer }
 \newcommand{\recherche}{0}
 \newcommand{\reco}{1}
