--- a/sections/formation.tex
+++ b/sections/formation.tex
@@ -7,33 +7,38 @@
 %         & \vspace{-6.5mm} {\tiny \ding{110}} \textit{Course with slides and lab sessions teaching from Linear Classifier to Unsupervised and Reinforcement Learning with projects every week }
 % \end{tabular}
 
+% IMT Atlantique
+{\color{black} \textbf{Master in Engineering specialized in Embedded Systems, Excellence Program for Research}} \hspace{5mm} \MYhref[myOrange]{https://www.imt-atlantique.fr}{\textbf{IMT Atlantique}} \hfill {\color{black}\textbf{2021 - 2025}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{5th-ranked engineering school in France} \\
+    & {\tiny \ding{110}} \textit{Mathematics, \textbf{Computer Vision}, \textbf{Data}, Sc Computing, \href{https://github.com/n2oblife/PyRat}{\textbf{graph theory}}, \href{https://github.com/n2oblife/TSP_genetic}{logistic optimization}.} \\ % Mathematics, Physics,  Sensor, LP Problems, Sc Computing, Management, Project Management, Machine Vision, Image Processing, graph theory, Developement, logistic opitmization, Data Manipulation
+    & {\tiny \ding{110}} \textit{Embedded Systems: \textbf{Algorithm-to-Chip Design \& Architecture}, Low-Level Software-Hardware Interactions, \href{https://github.com/n2oblife/galax}{\textbf{Parallel Computing}}, \href{https://github.com/n2oblife/SDM}{Stochastic Dynamic Modeling}, \href{https://github.com/n2oblife/EFDL}{\textbf{Deep Learning Optimization}}} \\
+%    & {\tiny \ding{110}} \textit{Cybersécurité : } \\
+    & {\tiny \ding{110}} \textit{School Projects: \href{https://github.com/n2oblife/DevOps_Orange}{\textbf{DevOps of a Deep Learning based audio measurement service in Docker} and .deb} with \href{https://www.orange.com}{Orange (telecom company)} / preliminary study of an electronic waste recycling startup} \\
+    & {\tiny \ding{110}} \textit{Research Projects: \href{https://github.com/n2oblife/Fast_Resolution_Algorithm}{Implementation of a \textbf{Fast resolution algorithm in C++ to compute eeg signals in real time}} / \textbf{state-of-the-art in ML comparing CNN and Vision Transformer in term of inference time and ressources consumption} / course given by myself on \href{https://ieeexplore.ieee.org/document/8610326}{Inversible CMOS Logic} to introduce this field of research to students in order to follow a Naoya Onizawa conference}
+\end{tabular}
+
 %MOOC ML
 {\color{black} \textbf{MicroMaster program in Statistics and Data Science}} \hspace{5mm} \MYhref[myOrange]{https://mitxonline.mit.edu/}{\textbf{MITx}} \hfill {\color{black}\textbf{February 2023 - May 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{\href{https://github.com/n2oblife/MITx-ML}{Machine Learning in Python : From Linear Models to Deep Learning} - 230h} \\
-    & {\tiny \ding{110}} \textit{Slides and lab sessions teaching from \textbf{Linear Classifier and recommander systems to Unsupervised and Reinforcement Learning} with projects every week to apply the notions.}
+    & {\tiny \ding{110}} \textit{Slides and lab sessions teaching from \textbf{Linear Classifier and recommander systems to Unsupervised and Reinforcement Learning} with projects every week to apply the notions}
 \end{tabular}
 
-% IMT Atlantique
-{\color{black} \textbf{Master in Engineering specialized in Embedded Systems, Excellence Program for Research}} \hspace{5mm} \MYhref[myOrange]{https://www.imt-atlantique.fr}{\textbf{IMT Atlantique}} \hfill {\color{black}\textbf{2021 - 2025}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{5th-ranked engineering school in France.} \\
-    & {\tiny \ding{110}} \textit{Mathematics, \textbf{Computer Vision}, \textbf{Data}, Sc Computing, \href{https://github.com/n2oblife/PyRat}{\textbf{graph theory}}, \href{https://github.com/n2oblife/TSP_genetic}{logistic optimization}.} \\ % Mathematics, Physics,  Sensor, LP Problems, Sc Computing, Management, Project Management, Machine Vision, Image Processing, graph theory, Developement, logistic opitmization, Data Manipulation
-    & {\tiny \ding{110}} \textit{Embedded Systems: \textbf{Algorithm-to-Chip Design \& Architecture}, Low-Level Software-Hardware Interactions, \href{https://github.com/n2oblife/galax}{\textbf{Parallel Computing}}, \href{https://github.com/n2oblife/SDM}{Stochastic Dynamic Modeling}, \href{https://github.com/n2oblife/EFDL}{\textbf{Deep Learning Optimization}}.} \\
-%    & {\tiny \ding{110}} \textit{Cybersécurité : } \\
-    & {\tiny \ding{110}} \textit{School Projects: \href{https://github.com/n2oblife/DevOps_Orange}{\textbf{DevOps of a Deep Learning based audio measurement service in Docker} and .deb} with \href{https://www.orange.com}{Orange (telecom company)} / preliminary study of an electronic waste recycling startup.} \\
-    & {\tiny \ding{110}} \textit{Research Projects: \href{https://github.com/n2oblife/Fast_Resolution_Algorithm}{Implementation of a \textbf{Fast resolution algorithm in C++ to compute eeg signals in real time}} / \textbf{state-of-the-art in ML comparing CNN and Vision Transformer in term of inference time and ressources consumption} / course given by myself on \href{https://ieeexplore.ieee.org/document/8610326}{Inversible CMOS Logic} to introduce this field of research to students in order to follow a Naoya Onizawa conference.}
-\end{tabular}
+\mynewpage
+\vspace{1cm}
 
 % prépa
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     2018 - 2021 & {\color{black} \vspace{-3mm} \textbf{Preparatory class for engineering schools, Physics section.}} \hspace{5mm} \MYhref[myOrange]{https://pia.ac-paris.fr/serail/jcms/s2_1470075/fr/accueil}{\textbf{Lycée Fénelon}} \\
-%         & {\tiny \ding{110}} \textit{Mathematics, Physics, Chemistry, English, Humanities}
-% \end{tabular}
+{\color{black} \textbf{Bachelor in Mathematics and Physics, preparatory classes}} \hspace{5mm} \MYhref[myOrange]{https://pia.ac-paris.fr/serail/jcms/s2_1470075/fr/accueil}{\textbf{Lycée Fénelon}} \hfill {\color{black}\textbf{2018 - 2021}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Preparatory classes, are intensive two-year programs designed to prepare students for admission to prestigious engineering schools in France} \\
+    & {\tiny \ding{110}} \textit{Advanced theorectical studies in Mathematics, Physics, Chemistry and general knowledge} \\
+    & {{\tiny \ding{110}} \textit{Practical lab sessions to apply some chapters studied in applied physics and chemistery}}
+\end{tabular}
 
 % Bac
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     2015 - 2018 & {\color{black} \vspace{-3mm} \textbf{High School, Sciences section}} \hspace{5mm} \MYhref[myOrange]{https://lycee-henri4.com/}{\textbf{Lycée Henri \rom{4}}} \\
-%         & {\tiny \ding{110}} \textit{A beacon of academic excellence in France, 2nd best high school} \\
-%         & {\tiny \ding{110}} \textit{With Honors, specializing in Mathematics and Computer Science}
-% \end{tabular}
+{\color{black} \textbf{High School Diploma, Baccalaureat of Science}} \hspace{5mm} \MYhref[myOrange]{https://lycee-henri4.com/}{\textbf{Lycée Henri \rom{4}}} \hfill {\color{black}\textbf{2015 - 2018}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A beacon of academic excellence in France, 2nd best French high school} \\
+    & {\tiny \ding{110}} \textit{With Honors, studiying Sciences and specializing in Mathematics and Computer Science}
+\end{tabular}
